# claw-code-rust

./: Cargo.toml  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  example_skill.md
.claude/skills/: find_skills.md
.github/workflows/: main.yml  rust.yml
crates/claw-cli/: Cargo.toml
crates/claw-cli/src/: config.rs  main.rs
crates/provider/src/: anthropic.rs
crates/skills/: Cargo.toml
crates/skills/src/: activation.rs  lib.rs  loader.rs  registry.rs  resolver.rs  skill.rs
crates/skills/src/builtin/: code_review.md  git_commit.md  refactor.md
