[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/tools",
    "crates/provider",
    "crates/permissions",
    "crates/tasks",
    "crates/compact",
    "crates/mcp",
    "crates/skills",
    "crates/claw-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
claw-core = { path = "crates/core" }
claw-tools = { path = "crates/tools" }
claw-provider = { path = "crates/provider" }
claw-permissions = { path = "crates/permissions" }
claw-tasks = { path = "crates/tasks" }
claw-compact = { path = "crates/compact" }
claw-mcp = { path = "crates/mcp" }
claw-skills = { path = "crates/skills" }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# AI provider SDKs
async-anthropic = "0.6"
async-openai = { version = "0.34", features = ["chat-completion", "rustls"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
glob = "0.3"
regex = "1"