[package]
name = "claw-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
claw-core.workspace = true
claw-tools.workspace = true
claw-permissions.workspace = true

serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
regex.workspace = true
glob.workspace = true
chrono.workspace = true
uuid.workspace = true